<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sharedUserId" translate="false">fruit.uid.shared<xliff:g id="x"></xliff:g></string>
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="application_name">Fruit Launcher</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="menu_item_add_item_to_dock">Add to Dock bar</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_thumbnail">Thumbnail</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_desktop">Preferences</string>
    <string name="menu_settings">Settings</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="default_browser_url" translatable="false">        http://www.google.com/m?client=ms-{CID}&amp;source=android-home-hotseat</string>
    <string name="launcher_settings">Desktop Preferences</string>
    <string name="settings_desktop_transition">Transition effect</string>
    <string name="settings_high_quality">High quality drawing</string>
    <string name="settings_high_quality_summary">enable high quality drawing may reduce performance</string>
    <string name="settings_theme">Desktop Theme</string>
    <string name="settings_manage_apps">Manage Apps</string>
    <string name="settings_screen_info">Screen Info</string>
    <string name="settings_apps_info">Apps Info</string>
    <string name="settings_multiscreenwallpaper">"Multiscreen Wallpaper"</string>
    <string name="settings_lockscreen">Lock Screen</string>
    <string name="settings_lockscreen_summary">Use Mango Lock Screen</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="current_desk_version">"Current version: "</string>
    <string name="settings_desk_version">"Version information"</string>
    <string name="settings_exit">Exit Fruit Launcher</string>
    <string name="widget_lock_screen">Lock Screen</string>
    <string name="widget_lock_screen_tips">Allow the application with admin permissions to enable screen lock at first run.</string>
    <string name="widget_clean_memory">Clean Memory</string>
    <string name="widget_clean_memory_report"><xliff:g id="format">%dM Memory Freed</xliff:g></string>
    <string name="widget_task_manager">Task Manager</string>
    <string name="widget_kill_task">Are you sure to kill all background applications to free memory?</string>
    <string name="task_manager_title">Running </string>
    <string name="task_manager_meminfo"><xliff:g id="format">Free/Total memory : %1$dM/%2$dM</xliff:g></string>
    <string name="delete_screen_error_one">Launcher must have at least 5 screen</string>
    <string name="delete_screen_error_home">You can not delete a default home screen</string>
    <string name="delete_screen_confirm_title">Warning</string>
    <string name="delete_screen_confirm_msg">The screen contains icon.Continue to delete?</string>
    <string name="menuitem_createfolder">New folder</string>
    <string name="app_fun_new_folder_name">Folder name :</string>
    <string name="app_fun_new_folder_app_title">Select the applications to be added in folder</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="edit_folder">Edit folder</string>
    <string name="new_folder">Create new folder</string>
    <string name="new_folder_title">New folder</string>
    <string name="new_folder_name">Folder</string>
    <string name="folder_name_is_empty">Please input folder name.</string>
    <string name="folder_name_is_full">Folder name reached max length.</string>
    <string name="folder_is_empty">Folder is null</string>
    <string name="folder_is_full">Folder is full</string>
    <string name="folder_contain_item">The icon already exists in the folder.</string>
    <string name="delete_error_system_app">Can not remove system application</string>
    <string name="move_to_desktop">Move to desktop</string>
    <string name="title_select_application">Select application</string>
    <string name="duplicate_shortcut">  Duplicate Shortcut!</string>
    <string name="folder_is_not_empty">  Cannot delete non-empty folder.</string>
    <string name="lenovo_set">Configure</string>
    <string name="lenovo_del">Delete</string>
    <string name="widget_clean_memory_alert">Not clean,Users in the best condition</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="px">pixels</string>
    <string name="density">Density</string>
    <string name="dpi">DPI</string>
    <string name="exhigh">exHigh</string>
	<string name="high">High</string>
	<string name="medium">Medium</string>
	<string name="low">Low</string>
	<string name="colon">": "</string>
	<string name="desktopiconnumber">Desktop Items</string>
    <string name="desktopwidgetnumber">Widget Count</string>
    <string name="multimedias">Multimedias</string>
    <string name="tools">Tools</string>
    <string name="games">Games</string>
</resources>